mocks/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: envoy
                codec_type: AUTO
                generate_request_id: true
                always_set_request_id_in_response: true
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                request_id_extension:
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                    use_request_id_for_trace_sampling: false
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: nohost
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: echo
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: listener
      connect_timeout: 0.250s
      type: LOGICAL_DNS
      lb_policy: LEAST_REQUEST
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: listener
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
    - name: envoy-admin
      connect_timeout: 0.250s
      type: LOGICAL_DNS
      lb_policy: LEAST_REQUEST
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: envoy-admin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 9901
    - name: echo
      connect_timeout: 0.250s
      type: LOGICAL_DNS
      lb_policy: LEAST_REQUEST
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: echo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: echo
                      port_value: 8080
